--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:context="grmpl.mk.stepandheightcounter.MainActivity"
     tools:showIn="@layout/activity_main" >
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
@@ -62,14 +62,24 @@
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
-                android:text="@string/height_accumulated"
+                android:text="@string/heightdesc_accumulated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightacc"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_marginTop="@dimen/default_gap"
-                android:layout_marginBottom="@dimen/default_gap"
                 android:layout_below="@+id/textViewHeight"
+                android:layout_alignStart="@+id/textViewSteps" />
+
+            <TextView
+                android:text="@string/time_accumulated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewTime"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:layout_marginTop="@dimen/default_gap"
+                android:layout_marginBottom="@dimen/default_gap"
+                android:layout_below="@+id/textViewHeightacc"
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
@@ -93,13 +103,24 @@
                 android:layout_alignEnd="@+id/textViewStepO" />
 
             <TextView
-                android:text="@string/zero_m"
+                android:text="@string/zerozero_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightaccO"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_alignBaseline="@+id/textViewHeightacc"
                 android:layout_alignBottom="@+id/textViewHeightacc"
+                android:layout_alignEnd="@+id/textViewStepO"
+                android:layout_marginTop="17dp" />
+
+            <TextView
+                android:text="@string/zero_s"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewTimeaccO"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:layout_alignBaseline="@+id/textViewTime"
+                android:layout_alignBottom="@+id/textViewTime"
                 android:layout_alignEnd="@+id/textViewStepO"
                 android:layout_marginTop="17dp" />
 
@@ -117,21 +138,22 @@
                 android:hint="@string/height_m"
                 android:maxLines="1"
                 android:layout_alignStart="@+id/textViewSteps"
-                android:layout_below="@id/textViewHeightacc"
+                android:layout_below="@id/textViewTime"
                 android:layout_marginTop="@dimen/default_gap"
                 android:layout_marginBottom="@dimen/default_gap"
                 android:layout_marginEnd="25dp"/>
 
             <Button
-                android:text="@string/button_calibrate_height"
+                android:id="@+id/buttonCalibrate"
+                style="@android:style/Widget.Material.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/buttonCalibrate"
+                android:layout_alignBaseline="@id/editTextHeightcal"
+                android:layout_marginStart="22dp"
                 android:layout_marginTop="29dp"
-                style="@android:style/Widget.Material.Button"
-                android:onClick="calibrateHeight"
                 android:layout_toEndOf="@id/editTextHeightcal"
-                android:layout_alignBaseline="@id/editTextHeightcal"/>
+                android:onClick="calibrateHeight"
+                android:text="@string/button_calibrate_height" />
 
             <Button
                 android:text="@string/button_reset_all"
