--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,13 +62,23 @@
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
-                android:text="@string/heightdesc_accumulated"
+                android:text="@string/height_accumulated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightacc"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_marginTop="@dimen/default_gap"
                 android:layout_below="@+id/textViewHeight"
+                android:layout_alignStart="@+id/textViewSteps" />
+
+            <TextView
+                android:text="@string/decr_accumulated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDecracc"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:layout_marginTop="@dimen/default_gap"
+                android:layout_below="@+id/textViewHeightacc"
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
@@ -79,7 +89,7 @@
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_marginTop="@dimen/default_gap"
                 android:layout_marginBottom="@dimen/default_gap"
-                android:layout_below="@+id/textViewHeightacc"
+                android:layout_below="@+id/textViewDecracc"
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
@@ -103,13 +113,24 @@
                 android:layout_alignEnd="@+id/textViewStepO" />
 
             <TextView
-                android:text="@string/zerozero_m"
+                android:text="@string/zero_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightaccO"
                 android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_alignBaseline="@+id/textViewHeightacc"
                 android:layout_alignBottom="@+id/textViewHeightacc"
+                android:layout_alignEnd="@+id/textViewStepO"
+                android:layout_marginTop="17dp" />
+
+            <TextView
+                android:text="@string/zero_m"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDecraccO"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:layout_alignBaseline="@+id/textViewDecracc"
+                android:layout_alignBottom="@+id/textViewDecracc"
                 android:layout_alignEnd="@+id/textViewStepO"
                 android:layout_marginTop="17dp" />
 
